tests/__snapshots__/validation-ts-expect-error-jsx-multiple-errors-stderr.snap.txt
Error: Only a single error can be suppressed.

   5 | <>
   6 |   {/*
   7 |       @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
     |       ~~~~~~~~~~~~~~~~
   8 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
   9 | 
  10 |   {/*

       at ./__typetests__/sample.tst.tsx:7:7

    The suppressed errors:

    Type 'boolean' is not assignable to type 'string'. ts(2322)

       6 |   {/*
       7 |       @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
       8 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
         |                ~~~~~~~~
       9 | 
      10 |   {/*
      11 |     // @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}

           at ./__typetests__/sample.tst.tsx:8:16

        The expected type comes from property 'userName' which is declared here on type '{ userName: string; }' ts(6500)

          1 | function ProfileCard(props: { userName: string }) {
            |                               ~~~~~~~~
          2 |   return <>{props.userName}</>;
          3 | }
          4 | 

              at ./__typetests__/sample.tst.tsx:1:31

    Type 'boolean' is not assignable to type 'string'. ts(2322)

       6 |   {/*
       7 |       @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
       8 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
         |                                               ~~~~~~~~
       9 | 
      10 |   {/*
      11 |     // @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}

           at ./__typetests__/sample.tst.tsx:8:47

        The expected type comes from property 'userName' which is declared here on type '{ userName: string; }' ts(6500)

          1 | function ProfileCard(props: { userName: string }) {
            |                               ~~~~~~~~
          2 |   return <>{props.userName}</>;
          3 | }
          4 | 

              at ./__typetests__/sample.tst.tsx:1:31

Error: Only a single error can be suppressed.

   9 | 
  10 |   {/*
  11 |     // @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
     |        ~~~~~~~~~~~~~~~~
  12 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
  13 | 
  14 |   {/*

       at ./__typetests__/sample.tst.tsx:11:8

    The suppressed errors:

    Type 'boolean' is not assignable to type 'string'. ts(2322)

      10 |   {/*
      11 |     // @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
      12 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
         |                ~~~~~~~~
      13 | 
      14 |   {/*
      15 |     * @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}

           at ./__typetests__/sample.tst.tsx:12:16

        The expected type comes from property 'userName' which is declared here on type '{ userName: string; }' ts(6500)

          1 | function ProfileCard(props: { userName: string }) {
            |                               ~~~~~~~~
          2 |   return <>{props.userName}</>;
          3 | }
          4 | 

              at ./__typetests__/sample.tst.tsx:1:31

    Type 'boolean' is not assignable to type 'string'. ts(2322)

      10 |   {/*
      11 |     // @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
      12 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
         |                                               ~~~~~~~~
      13 | 
      14 |   {/*
      15 |     * @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}

           at ./__typetests__/sample.tst.tsx:12:47

        The expected type comes from property 'userName' which is declared here on type '{ userName: string; }' ts(6500)

          1 | function ProfileCard(props: { userName: string }) {
            |                               ~~~~~~~~
          2 |   return <>{props.userName}</>;
          3 | }
          4 | 

              at ./__typetests__/sample.tst.tsx:1:31

Error: Only a single error can be suppressed.

  13 | 
  14 |   {/*
  15 |     * @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
     |       ~~~~~~~~~~~~~~~~
  16 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
  17 | 
  18 |   {/*@ts-expect-error  Type 'boolean' is not assignable to type 'string'.*/}

       at ./__typetests__/sample.tst.tsx:15:7

    The suppressed errors:

    Type 'boolean' is not assignable to type 'string'. ts(2322)

      14 |   {/*
      15 |     * @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
      16 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
         |                ~~~~~~~~
      17 | 
      18 |   {/*@ts-expect-error  Type 'boolean' is not assignable to type 'string'.*/}
      19 |   <ProfileCard userName={true} /><ProfileCard userName={true} />

           at ./__typetests__/sample.tst.tsx:16:16

        The expected type comes from property 'userName' which is declared here on type '{ userName: string; }' ts(6500)

          1 | function ProfileCard(props: { userName: string }) {
            |                               ~~~~~~~~
          2 |   return <>{props.userName}</>;
          3 | }
          4 | 

              at ./__typetests__/sample.tst.tsx:1:31

    Type 'boolean' is not assignable to type 'string'. ts(2322)

      14 |   {/*
      15 |     * @ts-expect-error  Type 'boolean' is not assignable to type 'string'. */}
      16 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
         |                                               ~~~~~~~~
      17 | 
      18 |   {/*@ts-expect-error  Type 'boolean' is not assignable to type 'string'.*/}
      19 |   <ProfileCard userName={true} /><ProfileCard userName={true} />

           at ./__typetests__/sample.tst.tsx:16:47

        The expected type comes from property 'userName' which is declared here on type '{ userName: string; }' ts(6500)

          1 | function ProfileCard(props: { userName: string }) {
            |                               ~~~~~~~~
          2 |   return <>{props.userName}</>;
          3 | }
          4 | 

              at ./__typetests__/sample.tst.tsx:1:31

Error: Only a single error can be suppressed.

  16 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
  17 | 
  18 |   {/*@ts-expect-error  Type 'boolean' is not assignable to type 'string'.*/}
     |      ~~~~~~~~~~~~~~~~
  19 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
  20 | </>
  21 | 

       at ./__typetests__/sample.tst.tsx:18:6

    The suppressed errors:

    Type 'boolean' is not assignable to type 'string'. ts(2322)

      17 | 
      18 |   {/*@ts-expect-error  Type 'boolean' is not assignable to type 'string'.*/}
      19 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
         |                ~~~~~~~~
      20 | </>
      21 | 

           at ./__typetests__/sample.tst.tsx:19:16

        The expected type comes from property 'userName' which is declared here on type '{ userName: string; }' ts(6500)

          1 | function ProfileCard(props: { userName: string }) {
            |                               ~~~~~~~~
          2 |   return <>{props.userName}</>;
          3 | }
          4 | 

              at ./__typetests__/sample.tst.tsx:1:31

    Type 'boolean' is not assignable to type 'string'. ts(2322)

      17 | 
      18 |   {/*@ts-expect-error  Type 'boolean' is not assignable to type 'string'.*/}
      19 |   <ProfileCard userName={true} /><ProfileCard userName={true} />
         |                                               ~~~~~~~~
      20 | </>
      21 | 

           at ./__typetests__/sample.tst.tsx:19:47

        The expected type comes from property 'userName' which is declared here on type '{ userName: string; }' ts(6500)

          1 | function ProfileCard(props: { userName: string }) {
            |                               ~~~~~~~~
          2 |   return <>{props.userName}</>;
          3 | }
          4 | 

              at ./__typetests__/sample.tst.tsx:1:31

